# yambar

./: .build.yml  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .woodpecker.yml  CHANGELOG.md  CMakeLists.txt  PKGBUILD  PKGBUILD.wayland-only  README.md  bar.c  bar.h  char32.c  char32.h  color.h  config-verify.c  config-verify.h  config.c  config.h  decoration.h  font-shaping.h  font.c  font.h  generate-version.sh  log.c  log.h  main.c  meson.build  meson_options.txt  module.c  module.h  particle.c  particle.h  plugin.c  plugin.h  tag.c  tag.h  tllist.h  xcb.c  (+4 more)
.builds/: alpine-x64.yml
bar/: CMakeLists.txt  backend.h  bar.c  bar.h  meson.build  private.h  wayland.c  wayland.h  xcb.c  xcb.h
completions/: meson.build
completions/zsh/: _f00bar  _yambar
decorations/: CMakeLists.txt  background.c  background.h  border.c  meson.build  overline.c  stack.c  stack.h  underline.c  underline.h
doc/: CMakeLists.txt  f00bar-decorations.5.scd  f00bar-module-alsa.5.scd  f00bar-modules.5.scd  f00bar-particles.5.scd  f00bar-tags.5.scd  f00bar.1.scd  f00bar.5.scd  meson.build  yambar-decorations.5.scd  yambar-modules-alsa.5.scd  yambar-modules-backlight.5.scd  yambar-modules-battery.5.scd  yambar-modules-clock.5.scd  yambar-modules-cpu.5.scd  yambar-modules-disk-io.5.scd  yambar-modules-dwl.5.scd  yambar-modules-foreign-toplevel.5.scd  yambar-modules-i3.5.scd  yambar-modules-label.5.scd  yambar-modules-mem.5.scd  yambar-modules-mpd.5.scd  yambar-modules-network.5.scd  yambar-modules-pipewire.5.scd  yambar-modules-pulse.5.scd  yambar-modules-removables.5.scd  yambar-modules-river.5.scd  yambar-modules-script.5.scd  yambar-modules-sway-xkb.5.scd  yambar-modules-sway.5.scd  yambar-modules-swayxkb.5.scd  yambar-modules-xkb.5.scd  yambar-modules-xwindow.5.scd  yambar-modules.5.scd  yambar-particles.5.scd  yambar-tags.5.scd  yambar.1.scd  yambar.5.scd
examples/configurations/: laptop.conf  river-tags.conf
examples/scripts/: cpu.sh  dwl-tags.sh  pacman.sh
modules/: CMakeLists.txt  alsa.c  alsa.h  backlight.c  backlight.h  battery.c  battery.h  clock.c  clock.h  cpu.c  disk-io.c  dwl.c  foreign-toplevel.c  i3-common.c  i3-common.h  i3.c  i3.h  label.c  label.h  mem.c  meson.build  mpd.c  mpd.h  network.c  network.h  pipewire.c  pulse.c  removables.c  removables.h  river.c  script.c  sway-xkb.c  sway_xkb.c  xkb.c  xkb.h  xwindow.c  xwindow.h
modules/alsa/: alsa.c  alsa.h
modules/backlight/: backlight.c  backlight.h
modules/battery/: battery.c  battery.h
modules/clock/: clock.c  clock.h
modules/i3/: dynlist-exposable.c  dynlist-exposable.h  i3.c  i3.h
modules/label/: label.c  label.h
modules/mpd/: mpd.c  mpd.h
modules/network/: network.c  network.h
modules/removables/: removables.c  removables.h
modules/xkb/: xkb.c  xkb.h
modules/xwindow/: xwindow.c  xwindow.h
particles/: CMakeLists.txt  dynlist.c  dynlist.h  empty.c  empty.h  list.c  list.h  map.c  map.h  map.l  map.y  meson.build  progress-bar.c  progress-bar.h  progress_bar.c  progress_bar.h  ramp.c  ramp.h  string.c  string.h
test/: full-conf-good.yml  meson.build  no-bar.yml
