option(
  'backend-x11', type: 'feature', value: 'enabled', description: 'XCB (X11) backend')
option(
  'backend-wayland', type: 'feature', value: 'enabled', description: 'Wayland backend')
option(
  'core-plugins-as-shared-libraries', type: 'boolean', value: false,
  description: 'Compiles modules, particles and decorations as shared libraries, which are loaded on-demand')

option('plugin-alsa', type: 'feature', value: 'auto',
       description: 'ALSA support')
option('plugin-backlight', type: 'feature', value: 'auto',
       description: 'Backlight support')
option('plugin-battery', type: 'feature', value: 'auto',
       description: 'Battery support')
option('plugin-clock', type: 'feature', value: 'auto',
       description: 'Clock support')
option('plugin-dwl', type: 'feature', value: 'auto',
       description: 'DWL (dwm for wayland) support')
option('plugin-mpd', type: 'feature', value: 'auto',
       description: 'Music Player Daemon (MPD) support')
option('plugin-pipewire', type: 'feature', value: 'auto',
       description: 'Pipewire support')
option('plugin-pulse', type: 'feature', value: 'auto',
       description: 'PulseAudio support')
